--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # REACT_APP_PUBLIC_FOLDER = http://aspec.zooin.site/assets/images/
 REACT_APP_PUBLIC_FOLDER = http://localhost:3000/assets/images/
 # REACT_APP_PUBLIC_FOLDER = http://176.226.222.15:3375/assets/images/
+REACT_APP_PUBLIC_FOLDER = https://stupendous-beijinho-d28ef5.netlify.app/assets/images/
