--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
+    "react-table": "^7.8.0",
     "react-tabs": "^5.1.0",
     "react-yandex-maps": "^4.6.0",
     "swiper": "^8.1.4",
