--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.0.0",
+    "react-error-boundary": "^3.1.4",
     "react-input-mask": "^2.0.4",
     "react-range": "^1.8.12",
     "react-router-dom": "^6.3.0",
