--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-input-mask": "^2.0.4",
+    "react-progressive-graceful-image": "^0.6.14",
     "react-range": "^1.8.12",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
